force-app/main/default/objects/Asset/fields/Approved_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Approved_Unit_Price__c</fullName>
    <description>The field is created for the new approval process. Allowable Sales Price will be stamped in this field on line creation and will be updated with Final Unit Price on every Quote Approval.</description>
    <label>Approved Unit Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>