force-app/main/default/objects/Asset/fields/Bundle_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Quantity__c</fullName>
    <label>Bundle Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>