force-app/main/default/objects/Asset/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Assets (Cloned From)</relationshipLabel>
    <relationshipName>Cloned_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>