force-app/main/default/objects/Asset/fields/Component_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Component_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>