force-app/main/default/objects/Asset/fields/Currency_Conversion_Factor__c.field-meta.xml
<CustomField>
    <fullName>Currency_Conversion_Factor__c</fullName>
    <formula>SBQQ__RequiredBySubscription__r.SBQQ__Contract__r.Currency_Conversion_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Conversion Factor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>