force-app/main/default/objects/Asset/fields/Discount_Amt__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amt__c</fullName>
    <label>Discount (Amt)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>