force-app/main/default/objects/Asset/fields/Final_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Unit_Price__c</fullName>
    <label>Final Unit Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>