force-app/main/default/objects/Asset/fields/IR_DR_Status__c.field-meta.xml
<CustomField>
    <fullName>IR_DR_Status__c</fullName>
    <description>This will come from ITSM</description>
    <label>IR/DR Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>