force-app/main/default/objects/Asset/fields/Location_Discount__c.field-meta.xml
<CustomField>
    <fullName>Location_Discount__c</fullName>
    <label>Location Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>