force-app/main/default/objects/Asset/fields/ProductOption_Disable_Qty_Multiplication__c.field-meta.xml
<CustomField>
    <fullName>ProductOption_Disable_Qty_Multiplication__c</fullName>
    <formula>SBQQ__QuoteLine__r.Disable_Quantity_Multiplication__c</formula>
    <label>ProductOption Disable Qty Multiplication</label>
    <type>Checkbox</type>
</CustomField>