force-app/main/default/objects/Asset/fields/Recurring_Commission_on_Actual_Billed__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Commission_on_Actual_Billed__c</fullName>
    <label>Recurring Commission % on Actual Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>