force-app/main/default/objects/Asset/fields/S_No__c.field-meta.xml
<CustomField>
    <fullName>S_No__c</fullName>
    <label>S. No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>