force-app/main/default/objects/Asset/fields/Technical_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Technical_Start_Date__c</fullName>
    <label>Technical Start Date</label>
    <type>Date</type>
</CustomField>