force-app/main/default/objects/Asset/fields/Term_discount__c.field-meta.xml
<CustomField>
    <fullName>Term_discount__c</fullName>
    <label>Term Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>