force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>UNIQUE SOLUTIONS</value>
    </filters>
    <filters>
        <field>ASSET.CREATED_DATE</field>
        <operation>equals</operation>
        <value>11/16/2021 12:00 AM</value>
    </filters>
    <label>All Assets</label>
</ListView>